// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`LineNumber in ScrollBox - Height and Overlap Issues single line_number with code in scrollbox should not have excessive height 1`] = `
" 1 function hello() {                   
 2   console.log("Hello, World!");      
 3   return 42;                         
 4 }                                    
                                        
                                        
                                        
                                        
                                        
                                        
                                        
                                        
                                        
                                        
                                        
                                        
                                        
                                        
                                        
                                        
                                        
                                        
                                        
                                        
                                        
                                        
                                        
                                        
                                        
                                        
"
`;

exports[`LineNumber in ScrollBox - Height and Overlap Issues multiple line_number blocks should not overlap - realistic chat scenario 1`] = `
"   2                                              
   3 test("hello returns greeting", () => {       
   4   expect(hello()).toBe("Hello, World!");     
   5 });                                          
                                                  
                                                  
                                                  
                                                  
                                                  
                                                  
                                                  
                                                  
                                                  
                                                  
                                                  
                                                  
                                                  
                                                  
                                                  
                                                  
                                                  
                                                  
                                                  
                                                  
                                                  
                                                  
                                                  
                                                  
                                                  
                                                  
                                                  
                                                  
                                                  
                                                  
                                                  
                                                  
                                                  
                                                  
                                                  
  I've also added a test file.                    
"
`;

exports[`LineNumber in ScrollBox - Height and Overlap Issues line_number height should match code content height, not double 1`] = `
"--- START MARKER ---                    
 1 const x = 1;                         
 2 const y = 2;                         
                                        
                                        
                                        
                                        
                                        
                                        
                                        
                                        
                                        
                                        
                                        
                                        
                                        
                                        
                                        
                                        
                                        
                                        
                                        
                                        
                                        
--- END MARKER ---                      
"
`;

exports[`LineNumber in ScrollBox - Height and Overlap Issues scrollbox with box container around line_number - no excessive height 1`] = `
"                                                  
  │ 1 function test() {                        │  
  │ 2   return true;                           │  
  │ 3 }                                        │  
  │                                            │  
  │                                            │  
  │                                            │  
  │                                            │  
  │                                            │  
  │                                            │  
  │                                            │  
  │                                            │  
  │                                            │  
  │                                            │  
  │                                            │  
  │                                            │  
  │                                            │  
  │                                            │  
  │                                            │  
  │                                            │  
  │                                            │  
  │                                            │  
  │                                            │  
  │                                            │  
  │                                            │  
  │                                            │  
  │                                            │  
  └────────────────────────────────────────────┘  
  Message 2                                       
                                                  
"
`;

exports[`LineNumber in ScrollBox - Height and Overlap Issues multiple messages with mixed content - verify no overlapping 1`] = `
"                                                            
   3 console.log(greet("World"));                           
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
  Error [2:5]: Unused variable                              
  And here's the main file.                                 
                                                            
"
`;

exports[`LineNumber in ScrollBox - Height and Overlap Issues scroll behavior - content should remain visible after scroll 1`] = `
" 1 const b = 2;                         
                                        
                                        
                                        
                                        
                                        
                                        
                                        
                                        
                                        
                                        
                                        
                                        
                                        
                                        
                                        
                                        
                                        
                                        
                                        
                                        
                                        
                                        
                                        
                                        
                                        
                                        
                                        
                                        
                                        
"
`;

exports[`LineNumber in ScrollBox - Height and Overlap Issues scroll behavior - content should remain visible after scroll 2`] = `
" 1 const var22 = 22;                    
                                        
                                        
                                        
                                        
                                        
                                        
                                        
                                        
                                        
                                        
                                        
                                        
                                        
                                        
                                        
                                        
                                        
                                        
                                        
                                        
                                        
                                        
                                        
                                        
                                        
                                        
                                        
                                        
                                        
"
`;

exports[`LineNumber in ScrollBox - Height and Overlap Issues VISUAL CHECK: box with line_number should have clean spacing 1`] = `
"                                                  
                                                  
  ┌────────────────────────────────────────────┐  
  │ 1 const x = 1;                             │  
  │ 2 const y = 2;                             │  
  │ 3 const z = 3;                             │  
  │                                            │  
  │                                            │  
  │                                            │  
  │                                            │  
  │                                            │  
  │                                            │  
  │                                            │  
  │                                            │  
  │                                            │  
  │                                            │  
  └────────────────────────────────────────────┘  
  ═══ Code Block 2 ═══                            
  ┌────────────────────────────────────────────┐  
  │ 1 function test() {                        │  
  │ 2   return 42;                             │  
  │ 3 }                                        │  
  │                                            │  
  │                                            │  
  │                                            │  
  │                                            │  
  │                                            │  
  │                                            │  
  │                                            │  
  │                                            │  
  │                                            │  
  │                                            │  
  ═══─End─═══──────────────────────────────────┘  
                                                  
                                                  
"
`;
